--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
     	<h2 style="color:#D14D39;">D</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">B</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">R</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">I</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">J</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -118,7 +118,7 @@
 				<p>the best celebration ever</p>
 				<p>and let me share...</p>
 				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
+				<p>This is...</p>
 				<p>as a birthday present to you</p>
 				<p>thanks for the friendship we made</p>
 				<p>thanks for everything</p>
@@ -136,11 +136,11 @@
 				<p>but...</p>
 				<p>don't worry</p>
 				<p>because...</p>
-				<p>God has your back</p>
+				<p>We, your friends, has your back</p>
 				<p>and</p>
 				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
+				<p>cos Im here :P</p>
+				<p>and I hope you'll find...</p>
 				<p>happiness along the way</p>
 				<p>keep your spirit up</p>
 				<p>enjoy every single moment...</p>
@@ -149,7 +149,7 @@
 				<p>and make it the best memory..</p>
 				<p>lastly...</p>
 				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sapthesh V</p>
+				<p>a very happy birthday Hashi!!</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
